<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>

    <!-- Strings used for fragments for navigation -->
    <string name="top_home_label">Expense Tracker</string>
    <string name="top_transaction_label">Transaction</string>
    <string name="top_calendar_label">Calendar</string>
    <string name="top_tag_label">Manage Tags</string>
    <string name="top_statistics_label">Tag Statistics</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_confirm">Confirm</string>
    <string name="prompt_update">Update</string>
    <string name="prompt_delete">Delete</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  menu strings  -->
    <string name="menu_add_transaction">Add Transaction</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_manage_tags">Manage Tags</string>
    <string name="menu_tag_statistics">Tag Statistics</string>

    <!--  home fragment strings  -->
    <string name="current_balance">Current Balance</string>
    <string name="balance">Tap to set balance</string>
    <string name="calc_balance">€ 0.00</string>
    <string name="month">{month}</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="to_spend">To Spend</string>
    <string name="to_save">To Save</string>
    <string name="transaction_success">Transaction Success!</string>
    <string name="account_balance_updated">Account balance updated!</string>
    <string name="edit_your_balance">Edit your balance</string>

    <!--  transaction fragment strings  -->
    <string name="currency">€</string>
    <string name="amount">0.0</string>
    <string name="title_label">Title</string>
    <string name="title_help">Please enter a title</string>
    <string name="date_label">Date</string>
    <string name="date_help">Please choose a date</string>
    <string name="tag_label">Tag</string>
    <string name="tag_help">Please choose a tag</string>
    <string name="interval_label">Interval</string>
    <string name="interval_help">Please choose an interval</string>
    <string name="save">Save</string>
    <string name="is_deposit">Deposit</string>
    <string name="is_withdrawal">Withdrawal</string>
    <string name="transaction_fields_error">One of the fields contains a wrong value, please update the transaction</string>

    <!--  tag fragment strings  -->
    <string name="new_tag">Enter new tag</string>
    <string name="tag_list">Tag List</string>
    <string name="tag_item_name">Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="tag_insert_error">Please fill in a tag name before submitting!</string>
    <string name="tag_update_error">You can\'t leave the tag name empty!</string>
    <string name="tag_delete_confirm">Are you sure you want to delete this tag?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>