<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionFragment">

    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="73dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094">

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:text="@string/currency"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/amount"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/edit_type"
        android:layout_width="123dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.810"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106">

        <RadioButton
            android:id="@+id/is_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_deposit" />

        <RadioButton
            android:id="@+id/is_withdrawal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_withdrawal" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/title_help"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/date_help"
        android:focusable="false"
        android:inputType="none"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/editTag"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/tag_help"
        android:focusable="false"
        android:inputType="none"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate"
        app:layout_constraintVertical_bias="0.12" />

    <Spinner
        android:id="@+id/tag_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editInterval"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/interval_help"
        android:focusable="false"
        android:inputType="none"
        android:longClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTag"
        app:layout_constraintVertical_bias="0.154" />

    <Spinner
        android:id="@+id/interval_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6200EE"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />


</androidx.constraintlayout.widget.ConstraintLayout>